# Latent-Space

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  main.ipynb  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml
Human Activity Recognition/Assignment/: .gitignore
Human Activity Recognition/Assignment/HAR/: CombineScript.py  MakeDataset.py  ZeroShot_FewShot.html
Human Activity Recognition/my-code/: PCA_components.csv  Task1.ipynb  Task2.html  Task2.ipynb  X_reduced.csv  X_train.txt  X_train_Tot_Acc.txt  main.ipynb
docs/: index.html  search.json
docs/Human Activity Recognition/Assignment/HAR/: ZeroShot_FewShot.html
docs/Human Activity Recognition/my-code/: Task2.html
site_libs/bootstrap/: bootstrap-6c158ee5ef28d3228a9cf1b225bfee3b.min.css  bootstrap-dark-02523ac3106a96feec50ac900c17ef7c.min.css
