[project]
name = "assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyqt6>=6.10.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tsfel>=0.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
